--- a/app/src/main/res/layout/entrada.xml
+++ b/app/src/main/res/layout/entrada.xml
@@ -3,34 +3,48 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        >
+        android:layout_height="match_parent">
         <ScrollView
             android:layout_width="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:scrollbars="vertical"
                 tools:context="com.adroitminds.tabbedview.Section2">
-                <TextView
-                    android:layout_width="wrap_content"
 
+                <LinearLayout
+                    android:layout_marginLeft="120dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="cursive"
-                    android:paddingTop="5dp"
-                    android:text="Entrada"
-                    android:textColor="#111111"
-                    android:textSize="40dp" />
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="cursive"
+                        android:paddingTop="5dp"
+                        android:text="Entrada"
+                        android:textColor="#111111"
+                        android:textSize="40dp" />
+
+                    <ImageView
+                        android:id="@+id/infoEntrada"
+                        android:layout_marginStart="60dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_info_outline_black_24dp"/>
+
+                </LinearLayout>
+
                 <ImageView
                     android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
                     android:src="@drawable/restaurant"
-
                     android:layout_height="wrap_content" />
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -61,9 +75,6 @@
                                 android:hint="Entrada"
                                 android:inputType="textPersonName"
                                 android:textColorHint="#fc050000" />
-
-
-
 
                         </android.support.design.widget.TextInputLayout>
                     </RelativeLayout>
@@ -109,45 +120,33 @@
                             android:inputType="textImeMultiLine" />
                     </android.support.design.widget.TextInputLayout>
 
-
-
                 </LinearLayout>
                 <LinearLayout
-
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:orientation="vertical">
+
                     <ImageView
                         android:id="@+id/fotoentrada"
                         android:layout_marginTop="5dp"
+                        android:layout_marginStart="99dp"
                         android:layout_width="100dp"
                         android:src="@drawable/img_base"
                         android:layout_height="100dp" />
+                    <Button
+                        android:id="@+id/Registrar"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:backgroundTint="@color/LightGreen"
+                        android:text="Registrar"
+                        android:textColor="#ffffff" />
+
                 </LinearLayout>
+
             </LinearLayout>
         </ScrollView>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fotos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="450dp"
-
-            app:srcCompat="@android:drawable/ic_menu_camera" />
-
-    <ImageView
-        android:id="@+id/Registrar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:paddingStart="10dp"
-        android:layout_gravity="bottom|start"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="450dp"
-        android:src="@drawable/ic_check_black_24dp"/>
-
     </android.support.design.widget.CoordinatorLayout>
 
 
