--- a/app/src/main/res/layout/extras.xml
+++ b/app/src/main/res/layout/extras.xml
@@ -5,8 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.RegistroMenu1"
-    >
+    tools:context=".View.RegistroMenu1">
 
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,31 +14,47 @@
         android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_height="wrap_content">
+
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:orientation="vertical"
             android:scrollbars="vertical"
             tools:context="com.adroitminds.tabbedview.Section2">
 
-            <TextView
-                android:layout_width="wrap_content"
-
+            <LinearLayout
+                android:layout_marginLeft="120dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="cursive"
-                android:paddingTop="5dp"
-                android:text="Menú"
-                android:textColor="#111111"
-                android:textSize="50dp" />
-            <ImageView
-                android:layout_gravity="center_horizontal"
-                android:layout_width="wrap_content"
-                android:src="@drawable/restaurant"
+                android:orientation="horizontal">
 
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="cursive"
+                    android:paddingTop="5dp"
+                    android:text="Menú"
+                    android:textColor="#111111"
+                    android:textSize="50dp" />
+
+                <ImageView
+                    android:id="@+id/infoEntrada4"
+                    android:layout_marginStart="75dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_info_outline_black_24dp"/>
+
+            </LinearLayout>
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/restaurant"
+                    android:layout_height="wrap_content" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,7 +69,6 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
-
                         android:gravity="center_horizontal">
 
                         <EditText
@@ -65,21 +79,19 @@
                             android:layout_centerHorizontal="true"
                             android:drawableStart="@drawable/breakfast"
                             android:ems="10"
-                            android:hint="PLATOS EXTRAS"
+                            android:hint="Platos extras"
                             android:inputType="textPersonName"
                             android:textColorHint="#fc050000" />
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
-
-
                         </RelativeLayout>
-
 
                     </android.support.design.widget.TextInputLayout>
 
                 </RelativeLayout>
+
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -99,8 +111,6 @@
                         android:hint="Precio"
                         android:inputType="number" />
                 </android.support.design.widget.TextInputLayout>
-
-
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -122,42 +132,34 @@
                         android:inputType="textImeMultiLine" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
-            <LinearLayout
 
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical">
+
                 <ImageView
                     android:id="@+id/fotoextra"
                     android:layout_marginTop="5dp"
+                    android:layout_marginStart="99dp"
                     android:layout_width="100dp"
                     android:src="@drawable/img_base"
                     android:layout_height="100dp" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_marginTop="5dp"
-                android:layout_height="wrap_content">
                 <Button
-
                     android:id="@+id/regisextras"
-                    android:layout_width="100dp"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="145dp"
                     android:layout_gravity="center_horizontal"
-                    android:backgroundTint="@color/colorPrimary"
+                    android:backgroundTint="@color/LightGreen"
                     android:text="Registrar"
                     android:textColor="#ffffff" />
-
-
-
 
             </LinearLayout>
 
         </LinearLayout>
+
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
