--- a/app/src/main/res/layout/menu_registro_menu1.xml
+++ b/app/src/main/res/layout/menu_registro_menu1.xml
@@ -36,25 +36,25 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Comidas" />
+                android:text="ENTRADAS" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Segundo" />
+                android:text="SEGUNDOS" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bebidas " />
+                android:text="Bebidas" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PLATOS EXTRAS" />
+                android:text="EXTRAS" />
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
