--- a/app/src/main/res/layout/segundo.xml
+++ b/app/src/main/res/layout/segundo.xml
@@ -3,34 +3,50 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent">
 
-        >
         <ScrollView
             android:layout_width="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:scrollbars="vertical"
                 tools:context="com.adroitminds.tabbedview.Section2">
-                <TextView
-                    android:layout_width="wrap_content"
+
+                <LinearLayout
+                    android:layout_marginLeft="120dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="cursive"
-                    android:paddingTop="5dp"
-                    android:text="Segundo"
-                    android:textColor="#111111"
-                    android:textSize="40dp" />
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="cursive"
+                        android:paddingTop="5dp"
+                        android:text="Segundo"
+                        android:textColor="#111111"
+                        android:textSize="40dp" />
+
+                    <ImageView
+                        android:id="@+id/infoEntrada2"
+                        android:layout_marginStart="60dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_info_outline_black_24dp"/>
+                </LinearLayout>
+
                 <ImageView
                     android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
                     android:src="@drawable/restaurant"
-
                     android:layout_height="wrap_content" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -134,17 +150,17 @@
                         android:layout_marginTop="5dp"
                         android:layout_width="100dp"
                         android:src="@drawable/img_base"
-                        android:layout_height="100dp" />
+                        android:layout_height="100dp"
+                        android:layout_gravity="center"/>
                 </LinearLayout>
-
 
                 <Button
                     android:id="@+id/registrarsegundo"
-                    android:layout_width="100dp"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="1dp"
                     android:layout_gravity="center_horizontal"
-                    android:backgroundTint="@color/colorPrimary"
+                    android:backgroundTint="@color/LightGreen"
                     android:text="Registrar"
                     android:textColor="#ffffff" />
             </LinearLayout>
