--- a/app/src/main/res/layout/entrada.xml
+++ b/app/src/main/res/layout/entrada.xml
@@ -1,152 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ScrollView
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:scrollbars="vertical"
+            tools:context="com.adroitminds.tabbedview.Section2">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:scrollbars="vertical"
-                tools:context="com.adroitminds.tabbedview.Section2">
+                android:layout_marginLeft="114dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_marginLeft="120dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="cursive"
-                        android:paddingTop="5dp"
-                        android:text="Entrada"
-                        android:textColor="#111111"
-                        android:textSize="40dp" />
-
-                    <ImageView
-                        android:id="@+id/infoEntrada"
-                        android:layout_marginStart="60dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/ic_info_outline_black_24dp"/>
-
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="wrap_content"
-                    android:src="@drawable/restaurant"
-                    android:layout_height="wrap_content" />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <RelativeLayout
-                        android:layout_marginTop="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentLeft="true"
-                            android:layout_centerVertical="true"
-
-                            android:gravity="center_horizontal">
-
-                            <EditText
-                                android:id="@+id/entrada1"
-                                android:layout_width="282dp"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentTop="true"
-                                android:layout_centerHorizontal="true"
-                                android:drawableStart="@drawable/breakfast"
-                                android:ems="10"
-                                android:hint="Entrada"
-                                android:inputType="textPersonName"
-                                android:textColorHint="#fc050000" />
-
-                        </android.support.design.widget.TextInputLayout>
-                    </RelativeLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerVertical="true"
-                        android:gravity="center_horizontal">
-
-                        <EditText
-                            android:id="@+id/precio"
-                            android:layout_width="282dp"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentTop="true"
-                            android:drawableStart="@drawable/ic_attach_money_black_24dp"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="166dp"
-                            android:ems="10"
-                            android:hint="Precio"
-                            android:inputType="number" />
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerVertical="true"
-                        android:gravity="center_horizontal">
-                        <EditText
-                            android:id="@+id/descripcion"
-                            android:layout_width="282dp"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentTop="true"
-                            android:lines="4"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="166dp"
-                            android:ems="10"
-                            android:drawableStart="@drawable/ic_description_black_24dp"
-                            android:hint="Descripcion"
-                            android:inputType="textImeMultiLine" />
-                    </android.support.design.widget.TextInputLayout>
-
-                </LinearLayout>
-                <LinearLayout
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:orientation="vertical">
+                    android:fontFamily="cursive"
+                    android:paddingTop="5dp"
+                    android:text="Entradas"
+                    android:textColor="#111111"
+                    android:textSize="45dp" />
 
-                    <ImageView
-                        android:id="@+id/fotoentrada"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginStart="99dp"
-                        android:layout_width="100dp"
-                        android:src="@drawable/img_base"
-                        android:layout_height="100dp" />
-                    <Button
-                        android:id="@+id/Registrar"
-                        android:layout_width="300dp"
+                <ImageView
+                    android:id="@+id/infoEntrada"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="15dp"
+                    android:src="@drawable/ic_info_outline_black_24dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:backgroundTint="@color/LightGreen"
-                        android:text="Registrar"
-                        android:textColor="#ffffff" />
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:gravity="center_horizontal">
 
+                        <EditText
+                            android:id="@+id/entrada1"
+                            android:layout_width="282dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_centerHorizontal="true"
+                            android:drawableStart="@drawable/breakfast"
+                            android:ems="10"
+                            android:hint="Entrada"
+                            android:inputType="textPersonName"
+                            android:textColorHint="#fc050000" />
+
+                    </android.support.design.widget.TextInputLayout>
+                </RelativeLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center_horizontal">
+
+                    <EditText
+                        android:id="@+id/precio"
+                        android:layout_width="282dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="166dp"
+                        android:drawableStart="@drawable/ic_attach_money_black_24dp"
+                        android:ems="10"
+                        android:hint="Precio"
+                        android:inputType="number" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center_horizontal">
+
+                    <EditText
+                        android:id="@+id/descripcion"
+                        android:layout_width="282dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="166dp"
+                        android:drawableStart="@drawable/ic_description_black_24dp"
+                        android:ems="10"
+                        android:hint="Descripcion"
+                        android:inputType="textImeMultiLine"
+                        android:lines="4" />
+                </android.support.design.widget.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Spinner
+                        android:id="@+id/diaReg1"
+                        android:layout_width="300dp"
+                        android:layout_marginStart="30dp"
+                        android:layout_height="wrap_content">
+
+                    </Spinner>
                 </LinearLayout>
 
             </LinearLayout>
-        </ScrollView>
-    </android.support.design.widget.CoordinatorLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/fotoentrada"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="99dp"
+                    android:layout_marginTop="5dp"
+                    android:src="@drawable/img_base" />
+
+                <Button
+                    android:id="@+id/Registrar"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:backgroundTint="@color/LightGreen"
+                    android:text="Registrar"
+                    android:textColor="#ffffff" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+</android.support.design.widget.CoordinatorLayout>
 
 
