--- a/app/src/main/res/layout/extras.xml
+++ b/app/src/main/res/layout/extras.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
@@ -8,15 +9,11 @@
     tools:context=".View.RegistroMenu1">
 
     <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -24,9 +21,10 @@
             tools:context="com.adroitminds.tabbedview.Section2">
 
             <LinearLayout
-                android:layout_marginLeft="120dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="119dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -35,34 +33,30 @@
                     android:layout_gravity="center"
                     android:fontFamily="cursive"
                     android:paddingTop="5dp"
-                    android:text="Menú"
+                    android:text="Extras"
                     android:textColor="#111111"
-                    android:textSize="50dp" />
+                    android:textSize="45dp" />
 
                 <ImageView
                     android:id="@+id/infoEntrada4"
-                    android:layout_marginStart="75dp"
-                    android:layout_marginTop="15dp"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/ic_info_outline_black_24dp"/>
+                    android:layout_marginStart="75dp"
+                    android:layout_marginTop="15dp"
+                    android:src="@drawable/ic_info_outline_black_24dp" />
 
             </LinearLayout>
 
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="wrap_content"
-                    android:src="@drawable/restaurant"
-                    android:layout_height="wrap_content" />
-
             <LinearLayout
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp">
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
@@ -83,13 +77,7 @@
                             android:inputType="textPersonName"
                             android:textColorHint="#fc050000" />
 
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                        </RelativeLayout>
-
                     </android.support.design.widget.TextInputLayout>
-
                 </RelativeLayout>
 
                 <android.support.design.widget.TextInputLayout
@@ -118,6 +106,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:gravity="center_horizontal">
+
                     <EditText
                         android:id="@+id/comentario"
                         android:layout_width="282dp"
@@ -131,6 +120,19 @@
                         android:hint="Descripcion"
                         android:inputType="textImeMultiLine" />
                 </android.support.design.widget.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Spinner
+                        android:id="@+id/diaReg4"
+                        android:layout_width="300dp"
+                        android:layout_marginStart="30dp"
+                        android:layout_height="wrap_content">
+
+                    </Spinner>
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
@@ -146,7 +148,6 @@
                     android:layout_width="100dp"
                     android:src="@drawable/img_base"
                     android:layout_height="100dp" />
-
                 <Button
                     android:id="@+id/regisextras"
                     android:layout_width="300dp"
@@ -159,7 +160,5 @@
             </LinearLayout>
 
         </LinearLayout>
-
     </ScrollView>
-
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
